--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WOODIES</title>
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="swiper/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
   </head>
@@ -500,7 +500,7 @@
       </div>
   </footer>
 
-  <script type="text/javascript" src="/swiper/swiper-bundle.min.js"></script>
+  <script type="text/javascript" src="swiper/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="swiper.js"></script>
   <script type="text/javascript" src="main-script.js"></script>
 </body>
