--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           <div class="footer-nav__column">
             <div class="header-logo">
               <a href="#" class="header-logo__link">
-                <img class="header-logo__img footer-logo__img" src="/img/logo.svg" alt="logo" />
+                <img class="header-logo__img footer-logo__img" src="img/logo.svg" alt="logo" />
                 <p class="header-logo__text">WOODIES</p>
               </a>
             </div>
