--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <p class="header-logo__text">WOODIES</p>
               </a>
             </div>
-            <a class="footer-nav__phone footer-text" href="tel://0128967453">(012) 8967453</a>
+            <a class="footer-nav__phone footer-text" href="tel:0128967453">(012) 8967453</a>
             <a class="footer-nav__email footer-text" href="mailto:woodies@gmail.com"> woodies@gmail.com</a>
             <a class="footer-nav__location footer-text" href="#">Jakarta, Indonesia</a>
           </div>
