--- a/index.html
+++ b/index.html
@@ -179,22 +179,22 @@
 			</div>
 			<div class="how_to-row">
 				<div class="how_to-row__item">
-					<img class="how_to-img" src="img/How to_design.png" alt="How to_design" />
+					<img class="how_to-img" src="img/How-to_design.png" alt="How to_design" />
 					<div class="number">1</div>
 					<p class="how_to-descr">Choose Design</p>
 				</div>
 				<div class="how_to-row__item">
-					<img class="how_to-img" src="img/How to_measuring.png" alt="How to_measuring" />
+					<img class="how_to-img" src="img/How-to_measuring.png" alt="How to_measuring" />
 					<div class="number">2</div>
 					<p class="how_to-descr">Area measuring</p>
 				</div>
 				<div class="how_to-row__item">
-					<img class="how_to-img" src="img/How to_budgeting.png" alt="How to_budgeting" />
+					<img class="how_to-img" src="img/How-to_budgeting.png" alt="How to_budgeting" />
 					<div class="number">3</div>
 					<p class="how_to-descr">Budgeting</p>
 				</div>
 				<div class="how_to-row__item">
-					<img class="how_to-img" src="img/How to_production.png" alt="How to_production" />
+					<img class="how_to-img" src="img/How-to_production.png" alt="How to_production" />
 					<div class="number">4</div>
 					<p class="how_to-descr">Production</p>
 				</div>
